// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowNavigation on mobile renders as expected 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="np-header d-flex flex-wrap np-flow-navigation"
      >
        <div
          class="align-items-center d-flex justify-content-start flex__item--6"
        >
          <div
            class="hidden-xs"
          >
            Logo 
            FULL
          </div>
          <div
            class="visible-xs"
          >
             
            <div>
              Logo 
              FLAG
            </div>
          </div>
        </div>
        <div
          class="align-items-center d-flex justify-content-end flex__item--6 "
        >
          <div />
        </div>
        <div
          class="align-items-center d-flex justify-content-center flex__item--12"
        >
          <div
            class="tw-stepper np-flow-navigation__stepper m-t-1"
          >
            <div
              class="progress"
            >
              <div
                class="progress-bar-filler"
                style="width: 0%;"
              />
              <div
                class="progress-bar-ending"
                style="width: 0%;"
              />
            </div>
            <ul
              class="tw-stepper-steps p-t-1 m-b-0"
            >
              <li
                class="
          hidden-xs
          tw-stepper__step
          tw-stepper__step--active
          
        "
                style="left: 0%;"
              >
                <button
                  class="btn-unstyled tw-stepper__step-label"
                  disabled=""
                  type="button"
                >
                  <small>
                    label-0
                  </small>
                </button>
              </li>
              <li
                class="
          hidden-xs
          tw-stepper__step
          
          
        "
                style="left: 100%;"
              >
                <button
                  class="btn-unstyled tw-stepper__step-label"
                  disabled=""
                  type="button"
                >
                  <small>
                    label-1
                  </small>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="np-header d-flex flex-wrap np-flow-navigation"
    >
      <div
        class="align-items-center d-flex justify-content-start flex__item--6"
      >
        <div
          class="hidden-xs"
        >
          Logo 
          FULL
        </div>
        <div
          class="visible-xs"
        >
           
          <div>
            Logo 
            FLAG
          </div>
        </div>
      </div>
      <div
        class="align-items-center d-flex justify-content-end flex__item--6 "
      >
        <div />
      </div>
      <div
        class="align-items-center d-flex justify-content-center flex__item--12"
      >
        <div
          class="tw-stepper np-flow-navigation__stepper m-t-1"
        >
          <div
            class="progress"
          >
            <div
              class="progress-bar-filler"
              style="width: 0%;"
            />
            <div
              class="progress-bar-ending"
              style="width: 0%;"
            />
          </div>
          <ul
            class="tw-stepper-steps p-t-1 m-b-0"
          >
            <li
              class="
          hidden-xs
          tw-stepper__step
          tw-stepper__step--active
          
        "
              style="left: 0%;"
            >
              <button
                class="btn-unstyled tw-stepper__step-label"
                disabled=""
                type="button"
              >
                <small>
                  label-0
                </small>
              </button>
            </li>
            <li
              class="
          hidden-xs
          tw-stepper__step
          
          
        "
              style="left: 100%;"
            >
              <button
                class="btn-unstyled tw-stepper__step-label"
                disabled=""
                type="button"
              >
                <small>
                  label-1
                </small>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FlowNavigation renders as expected 1`] = `
<div>
  <div
    class="np-header d-flex flex-wrap np-flow-navigation"
  >
    <div
      class="align-items-center d-flex justify-content-start"
    >
      <div
        class="hidden-xs"
      >
        Logo 
        FULL
      </div>
      <div
        class="visible-xs"
      >
         
        <div>
          Logo 
          FLAG
        </div>
      </div>
    </div>
    <div
      class="align-items-center d-flex justify-content-end order-2"
    >
      <div />
    </div>
    <div
      class="align-items-center d-flex justify-content-center order-1 flex-grow-1"
    >
      <div
        class="tw-stepper np-flow-navigation__stepper m-t-1"
      >
        <div
          class="progress"
        >
          <div
            class="progress-bar-filler"
            style="width: 0%;"
          />
          <div
            class="progress-bar-ending"
            style="width: 0%;"
          />
        </div>
        <ul
          class="tw-stepper-steps p-t-1 m-b-0"
        >
          <li
            class="
          hidden-xs
          tw-stepper__step
          tw-stepper__step--active
          
        "
            style="left: 0%;"
          >
            <button
              class="btn-unstyled tw-stepper__step-label"
              disabled=""
              type="button"
            >
              <small>
                label-0
              </small>
            </button>
          </li>
          <li
            class="
          hidden-xs
          tw-stepper__step
          
          
        "
            style="left: 100%;"
          >
            <button
              class="btn-unstyled tw-stepper__step-label"
              disabled=""
              type="button"
            >
              <small>
                label-1
              </small>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
